<resources>
    <string name="app_name">MyMav</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">utaLogo</string>
    <string name="project_name_text">STUDENT SCHEDULING SERVICE</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="registration_title">Registration</string>
    <string name="edit_user_title">Edit User</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button_text">REGISTER</string>
    <string name="update_button_text">UPDATE</string>

    <string name="title_activity_create_schedule">CreateScheduleActivity</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>
    <string name="title_activity_login">LogIn</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="title_activity_add_blocked_time">AddBlockedTimeActivity</string>
    <string name="title_activity_add_class">AddClassActivity</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="title_activity_store_schedule">StoreScheduleActivity</string>
	<string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_select_class">SelectClassActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_schedule_screen">ScheduleScreenActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_select_courses">Select Courses</string>
    <string name="title_activity_select_blockout_times">Select Block-Out Times</string>
    <string name="title_activity_create_account">" Create Account"</string>

    <string name="title_activity_detailed_schedule">DetailedSchedule</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_sync">Sync</string>
    <string name="title_activity_select_course">SelectCourse</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_activity_course_menu">CourseMenuActivity</string>

    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="semesters">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
</resources>