<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="omicron.mss.LoginActivity"
    android:background="@drawable/colors">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:id="@+id/logoView"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/uta_mascot_2c"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/project_name_text"
        android:id="@+id/titleView"
        android:layout_below="@+id/logoView"
        android:textColor="#7588ed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernameText"
        android:hint="@string/username_text"
        android:textColorHint="#ff959395"
        android:background="@drawable/text_box2"
        android:layout_below="@+id/titleView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:hint="@string/password_text"
        android:textColorHint="#ff959395"
        android:background="@drawable/text_box2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_alignEnd="@+id/usernameText"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignStart="@+id/usernameText"
        android:gravity="center"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/login_button_text"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:onClick="login"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_grey"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Forgot your password?"
        android:onClick = "gotoForget"
        android:id="@+id/forgotPasswordView"
        android:gravity="center_vertical|center_horizontal"
        android:clickable="true"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignBottom="@+id/loginButton"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Need to register?"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp" />



</RelativeLayout>
