<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/colors"
    android:gravity="start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration_title"
        android:id="@+id/registerText"
        android:gravity="center_horizontal"
        android:textColor="#7588ed"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernameRegisterEditText"
        android:hint="@string/username_text"
        android:background="@drawable/text_box2"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/registerText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textColorHint="#FF7B797B" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegisterEditText"
        android:hint="@string/password_text"
        android:background="@drawable/text_box2"
        android:textColorHint="#FF7B797B"
        android:layout_below="@+id/usernameRegisterEditText"
        android:layout_alignLeft="@+id/usernameRegisterEditText"
        android:layout_alignRight="@+id/usernameRegisterEditText"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="15sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordRegisterEditText"
        android:hint="@string/confirm_password"
        android:background="@drawable/text_box2"
        android:textColorHint="#FF7B797B"
        android:layout_below="@+id/passwordRegisterEditText"
        android:layout_alignLeft="@+id/passwordRegisterEditText"
        android:layout_alignRight="@+id/usernameRegisterEditText"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:id="@+id/registerButton"
        android:background="@drawable/button_grey"
        android:layout_alignParentBottom="false"
        android:layout_alignRight="@+id/confirmPasswordRegisterEditText"
        android:layout_alignEnd="@+id/confirmPasswordRegisterEditText"
        android:layout_below="@+id/emailRegisterEditText"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegisterEditText"
        android:background="@drawable/text_box2"
        android:layout_marginTop="15dp"
        android:hint="Enter Email Address"
        android:layout_below="@+id/confirmPasswordRegisterEditText"
        android:layout_alignLeft="@+id/confirmPasswordRegisterEditText"
        android:layout_alignStart="@+id/confirmPasswordRegisterEditText"
        android:layout_alignRight="@+id/registerButton"
        android:layout_alignEnd="@+id/registerButton"
        android:gravity="center"
        android:textSize="15sp"
        android:textColorHint="#FF7B797B"
        android:textIsSelectable="true" />
</RelativeLayout>
